Fixed MENU horizontal scrollbar

--- a/scss/Menu-Bastille.scss
+++ b/scss/Menu-Bastille.scss
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body {
-    max-width: 100vw;
+    width: 100%;
     margin: auto;
 }
 /* color variables */
@@ -24,10 +24,6 @@ $secondaryFont: Roboto;
     align-items: center;
     flex-direction: column;
 } 
-body {
-    max-width: 100vw;
-    margin: auto;
-}
 .header {
     display: flex;
     &__icon {
@@ -36,7 +32,7 @@ body {
         font-size: 23px;
         }
     &__logo {
-        width: 100vw;
+        width: 100%;
         height: 80px;
         text-align: center;
         line-height: 110px;
@@ -46,7 +42,7 @@ body {
     }
 }
 .img {
-    width: 100vw;
+    width: 100%;
     z-index: 0;
 }
 .menu {
@@ -113,7 +109,7 @@ body {
     padding-top: 15px;
     &__logo {
         filter:invert(100%);
-        width: 30vw;
+        width: 30%;
         padding-left: 20px;
     }
     .suggest {
@@ -123,7 +119,6 @@ body {
             position: relative;
             top: 7px;
             padding-right: 10px;
-            padding-left: -2px;
         }
     }
     .partner {
